--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "express": "^4.15.5",
-        "request": "^2.82.0",
-        "body-parser": "^1.18.2",
-        "gm": "^1.23.0",
         "async": "^2.5.0",
+        "body-parser": "^1.18.2",
+        "express": "^4.15.5",
+        "gm": "^1.23.0",
+        "librsvg": "^0.7.0",
         "multer": "^1.3.0",
+        "request": "^2.82.0",
         "request-promise-native": "^1.0.5"
     },
     "engines": {
