--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "gm": "^1.23.0",
         "librsvg": "^0.7.0",
         "multer": "^1.3.0",
+        "nodemon": "^1.19.1",
         "request": "^2.82.0",
         "request-promise-native": "^1.0.5"
     },
