--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "request-promise-native": "^1.0.5"
     },
     "engines": {
-        "node": "10.x.x"
+        "node": ">=12"
     },
     "keywords": [
         "favicon",
