--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
         "start": "node server.js"
     },
     "dependencies": {
-        "async": "^2.5.0",
+        "async": "^3.2.0",
         "body-parser": "^1.18.2",
         "express": "^4.15.5",
         "gm": "^1.23.0",
-        "librsvg": "^0.7.0",
+        "librsvg-prebuilt": "^0.7.10",
         "multer": "^1.3.0",
-        "nodemon": "^1.19.1",
+        "nodemon": "^2.0.4",
         "request": "^2.82.0",
         "request-promise-native": "^1.0.5"
     },
     "engines": {
-        "node": ">=12"
+        "node": "=10"
     },
     "keywords": [
         "favicon",
